<resources>
    <string name="app_name">Emergency Numbers</string>
    <string name="emergency_numbers">Emergency Numbers</string>
    <string name="south_america">South America</string>
    <string name="north_america">North America</string>
    <string name="europe">Europe</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="oceania">Oceania</string>
    <string name="tap_a_continent_to_get_started">Tap a continent to get started</string>
    <string name="by_611_solutions">by 611 Solutions</string>
</resources>
